# camp2023-story-bot

./: LICENSE  README.md  main.py  pyproject.toml
story/: bonus.json  ch0.json  ch1.json  ch10.json  ch11.json  ch11_5.json  ch12.json  ch13.json  ch14.json  ch15.json  ch15_5.json  ch15_6.json  ch16.json  ch17.json  ch18.json  ch19.json  ch19_2.json  ch19_5.json  ch2.json  ch20.json  ch21.json  ch21_2.json  ch21_3.json  ch21_4.json  ch22.json  ch22_2.json  ch22_3.json  ch3.json  ch3_5.json  ch4.json  ch5.json  ch6.json  ch7.json  ch8.json  ch9.json  final.json
